Consolidate shared benchmark environment in README